--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -327,7 +327,12 @@
     .k-xian{
         position: relative;
     }
-
+    .k-min ul li{
+        color: white;
+    }
+    .my_active{
+        background-color: orange;
+    }
     </style>
 </head>
 <body ontouchstart>
@@ -370,15 +375,12 @@
         </div>
         <div class="k-min">
             <ul >
-                <!--<li>-->
-                    <!--~-->
-                <!--</li>-->
-                <!--<li>分时线</li>-->
-                <li style="color: white">1分钟</li>
-                <li style="color: white">5分钟</li>
-                <li style="color: white">15分钟</li>
-                <li style="color: white">30分钟</li>
-                <li style="color: white">45分钟</li>
+                <li gap="1minute">1分钟</li>
+                <li gap="5minute">5分钟</li>
+                <li gap="15minute">15分钟</li>
+                <li gap="30minute">30分钟</li>
+                <li gap="60minute">1小时</li>
+                <li class="my_active default_active" gap="1day" count="30">1天</li>
             </ul>
         </div>
         <div class="k-xian">
@@ -855,7 +857,13 @@ $(".shosu").blur(function () {
         $(".shosu").val(0);
     }
 });
-
+//切换1min 5min
+$('.k-min ul li').click(function(){
+    $(this).addClass('my_active').siblings().removeClass('my_active');
+    var coinType = $('#active_product_name').attr('data-abbreviation-name');
+//    var gap = $(this).attr('gap');
+//    setCandlestick(coinType,gap,30);
+});
 var loc = window.location;
 var baseUrl  = loc.protocol  + '//' + loc.host + '/golang'
 var openPrice = [];
@@ -964,6 +972,8 @@ function count_profit(){
 $(".txt").click(function () {
 //    $(this).addClass("active");
 //    $(this).siblings().removeClass("active");
+    $('.default_active').addClass('my_active').siblings().removeClass('my_active');
+
     //产品名称
     var name= $(this).attr('data-abbreviation');
     //顶部产品属性
