--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -363,12 +363,12 @@
             </div>
             <div class="ktr-lr">
                 <p>
-                    <span style="color: white">高 <span id="high">0.00</span></span>
-                    <span>开 <span id="open">0.00</span></span>
+                    <span style="color: white">高 <span id="price-k-high">0.00</span></span>
+                    <span>开 <span id="price-k-open">0.00</span></span>
                 </p>
                 <p>
-                    <span style="color: white">低 <span class="low">0.00</span></span>
-                    <span style="color: white">收 <span class="close">0.00</span></span>
+                    <span style="color: white">低 <span id="price-k-low">0.00</span></span>
+                    <span style="color: white">收 <span id="price-k-close">0.00</span></span>
                 </p>
                
             </div>
@@ -568,222 +568,6 @@ function calculateMA(dayCount, data) {
 
 
 
-/*
-var dataMA5 = calculateMA(5, data);
-
-
-var option = {
-    animation: false,
-    color: colorList,
-
-    legend: {
-        top: 30,
-        data: ['日K', 'MA5', 'MA10', 'MA20', 'MA30']
-    },
-    tooltip: {
-        triggerOn: 'none',
-        transitionDuration: 0,
-        confine: true,
-        bordeRadius: 4,
-        borderWidth: 1,
-        borderColor: '#333',
-        backgroundColor: 'rgba(255,255,255,0.9)',
-        textStyle: {
-            fontSize: 12,
-            color: '#333'
-        },
-        position: function (pos, params, el, elRect, size) {
-            var obj = {
-                top: 60
-            };
-            obj[['left', 'right'][+(pos[0] < size.viewSize[0] / 2)]] = 5;
-            return obj;
-        }
-    },
-    axisPointer: {
-        link: [{
-            xAxisIndex: [0, 1]
-        }]
-    },
-    dataZoom: [{
-        type: 'slider',
-        xAxisIndex: [0, 1],
-        realtime: false,
-        start: 20,
-        end: 70,
-        top: 10,
-        height: 0,
-        handleIcon: 'M10.7,11.9H9.3c-4.9,0.3-8.8,4.4-8.8,9.4c0,5,3.9,9.1,8.8,9.4h1.3c4.9-0.3,8.8-4.4,8.8-9.4C19.5,16.3,15.6,12.2,10.7,11.9z M13.3,24.4H6.7V23h6.6V24.4z M13.3,19.6H6.7v-1.4h6.6V19.6z',
-        handleSize: '120%'
-    }, {
-        type: 'inside',
-        xAxisIndex: [0, 1],
-        start: 40,
-        end: 70,
-        top: 30,
-        height: 20
-    }],
-    xAxis: [{
-        type: 'category',
-        data: dates,
-        boundaryGap: false,
-        axisLine: {lineStyle: {color: '#777'}},
-        axisLabel: {
-            formatter: function (value) {
-                return echarts.format.formatTime('MM-dd', value);
-            }
-        },
-        min: 'dataMin',
-        max: 'dataMax',
-        axisPointer: {
-            show: true
-        }
-    }, {
-        type: 'category',
-        gridIndex: 1,
-        data: dates,
-        scale: true,
-        boundaryGap: false,
-        splitLine: {show: false},
-        axisLabel: {show: false},
-        axisTick: {show: false},
-        axisLine: {lineStyle: {color: '#777'}},
-        splitNumber: 20,
-        min: 'dataMin',
-        max: 'dataMax',
-        axisPointer: {
-            type: 'shadow',
-            label: {show: false},
-            triggerTooltip: true,
-            handle: {
-                show: false,
-                margin: 30,
-                color: '#B80C00'
-            }
-        }
-    }],
-    yAxis: [{
-        scale: true,
-        splitNumber: 2,
-        axisLine: {lineStyle: {color: '#777'}},
-        splitLine: {show: true},
-        axisTick: {show: false},
-        axisLabel: {
-            inside: true,
-            formatter: '{value}\n'
-        }
-    }, {
-        scale: true,
-        gridIndex: 1,
-        splitNumber: 2,
-        axisLabel: {show: false},
-        axisLine: {show: false},
-        axisTick: {show: false},
-        splitLine: {show: false}
-    }],
-    grid: [{
-        left: 20,
-        right: 20,
-        top: 80,
-        height: 240
-    }, {
-        left: 20,
-        right: 20,
-        height: 40,
-        top: 360
-    }],
-    graphic: [{
-        type: 'group',
-        left: 'center',
-        top: 70,
-        width: 300,
-        bounding: 'raw',
-        children: [{
-            id: 'MA5',
-            type: 'text',
-            style: {fill: colorList[1], font: labelFont},
-            left: 0
-        }, {
-            id: 'MA10',
-            type: 'text',
-            style: {fill: colorList[2], font: labelFont},
-            left: 'center'
-        }, {
-            id: 'MA20',
-            type: 'text',
-            style: {fill: colorList[3], font: labelFont},
-            right: 0
-        }]
-    }],
-    series: [{
-        name: 'Volume',
-        type: 'bar',
-        xAxisIndex: 1,
-        yAxisIndex: 1,
-        itemStyle: {
-            normal: {
-                color: '#7fbe9e'
-            },
-            emphasis: {
-                color: '#140'
-            }
-        },
-        data: volumes
-    }, {
-        type: 'candlestick',
-        name: '日K',
-        data: data,
-        itemStyle: {
-            normal: {
-                color: '#ef232a',
-                color0: '#14b143',
-                borderColor: '#ef232a',
-                borderColor0: '#14b143'
-            },
-            emphasis: {
-                color: 'black',
-                color0: '#444',
-                borderColor: 'black',
-                borderColor0: '#444'
-            }
-        }
-    }, {
-        name: 'MA5',
-        type: 'line',
-        data: dataMA5,
-        smooth: true,
-        showSymbol: false,
-        lineStyle: {
-            normal: {
-                width: 1
-            }
-        }
-    }, {
-        name: 'MA10',
-        type: 'line',
-        data: dataMA10,
-        smooth: true,
-        showSymbol: false,
-        lineStyle: {
-            normal: {
-                width: 1
-            }
-        }
-    }, {
-        name: 'MA20',
-        type: 'line',
-        data: dataMA20,
-        smooth: true,
-        showSymbol: false,
-        lineStyle: {
-            normal: {
-                width: 1
-            }
-        }
-    }]
-};
-myChart.setOption(option);
-*/
 
 $(".model .model-content").click(function (e) {
     e.stopPropagation();
@@ -1047,16 +831,17 @@ Date.prototype.format = function(fmt) {
     return fmt;
 }
 
-	var datefmt = "yyyy-MM-dd";
-	if (gap == "hour") {
-		datefmt = "yyyy-MM-dd mm时";
+	var datefmt = "MM-dd";
+	if (gap.includes("hour")) {
+		datefmt = "dd日hh时";
 	}
-	if (gap == "minute") {
-		datefmt = "yyyy-MM-dd mm:hh";
+	if (gap.includes("minute")) {
+		datefmt = "hh:mm";
 	}	
 
 	var dates = dataFromApi.Data.map(function (item) {
-		return new Date(item.time*1000).format(datefmt);
+		//return new Date(item.time*1000);//.format(datefmt);
+		return item.time*1000;
 	});
 
 
@@ -1065,10 +850,9 @@ Date.prototype.format = function(fmt) {
     });
 
     var valueToday = dataFromApi.Data[dataFromApi.Data.length - 1];
-/*    $.each(valueToday,function(k,v){
+    $.each(valueToday,function(k,v){
         $("#price-k-" +k).text(v);
 	});
-*/
 
 	var dataMA5 = calculateMA(5, data);
 var option = {
@@ -1134,7 +918,9 @@ var option = {
         },
         axisLabel: {
             formatter: function(value) {
-                return echarts.format.formatTime('MM-dd', value);
+			//	return value;
+                //return echarts.format.formatTime('MM-dd', value);
+				return new Date(+value).format(datefmt);
             }
         },
         min: 'dataMin',
@@ -1278,7 +1064,21 @@ var option = {
                 borderColor: 'black',
                 borderColor0: '#444'
             }
-        }
+        },
+
+		markLine: {
+			data: [{
+			   yAxis: valueToday.close
+			}
+			],
+			lineStyle: {
+				color: 'rgb(255,255,255)'
+			},
+			label: {
+				show: true,
+				position: 'middle'
+			}
+		}
     },
     {
         name: 'MA5',
@@ -1399,12 +1199,19 @@ $(function  () {
                     if(k==active_name){
                         //计算止盈止损
                         count_wave(new_price);
-//                            var opt = myChart.getOption();
-//                            if(opt){
-//                                opt.series[0].markLine.data[0].yAxis = new_price;
-//                                myChart.clear();
-//                                myChart.setOption(opt);
-//                            }
+                            var opt = myChart.getOption();
+                            if(opt){
+                                opt.series[0].markLine.data[0].yAxis = new_price;
+								var d = opt.series[0].data;
+								d = d[d.length - 1]
+								d[1] = new_price;
+								if(d[2] > new_price)
+									d[2] = new_price;
+								if(d[3] < new_price)
+									d[3] = new_price;
+                                myChart.clear();
+                                myChart.setOption(opt);
+                            }
                     }
                     //计算涨幅跌幅
                     countRange(new_price,k,active_name);
