--- a/application/mobile/view/login/login.html
+++ b/application/mobile/view/login/login.html
@@ -35,10 +35,10 @@
             <!--<a href="javascript:;" class="login-oth-btn common-div">QQ登陆</a>-->
         </form>
     </div>
-    <!--<div class="forgets">-->
-    	<!--<a ></a>-->
-        <!--<a href="/mobile/Login/register">免费注册</a>-->
-    <!--</div>-->
+    <div class="forgets">
+    	<a ></a>
+        <a href="/mobile/Index/index">回到首頁</a>
+    </div>
 </div>
 </body>
 </html>
