--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -575,7 +575,7 @@ $(".model .model-content").click(function (e) {
 $(".model").click(function () {
     $(".model").hide();
 });
-$(".tr-header .tr-mo").click(function () {
+$(".tr-header .tr-mo img,.product_name").click(function () {
     $('.headar').show();
 });
 $(".ar-tit ul li").click(function(){
