--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -22,7 +22,7 @@
   <div class="swiper-container swiper-banner">
     <div class="swiper-wrapper">
         {volist name="adv" id="val"}
-      <div class="swiper-slide"><a href="{$val.url}"><img src="{$val.image}" /></a></div>
+      <div class="swiper-slide"><a href="{$val.url}"><img src="{$val.image}" style="height: 10rem;" /></a></div>
         {/volist}
     </div>
     <div class="swiper-pagination"></div>
