--- a/application/index/view/trade/index.html
+++ b/application/index/view/trade/index.html
@@ -492,7 +492,7 @@
                 <div data-v-c4371006="" class="indexleft" style="margin-top: 30px;">
                     <div data-v-c4371006="" class="lefttop">
                         <p data-v-c4371006="">账户余额 :  <span id="user_money">{$user.money|number_format=###,2,'.',''}</span>USD</p>
-                        <p data-v-c4371006="">保证金余额 :  <span id="user_promise_money">{$user.promise_money|number_format=###,2,'.',''}</span> USD</p>
+                        <p data-v-c4371006="">占用保证金 :  <span id="user_promise_money">{$user.promise_money|number_format=###,2,'.',''}</span> USD</p>
                         <p data-v-c4371006="">可用余额 :  <span id="user_real_money">{$user.real_money|number_format=###,2,'.',''}</span> USD</p>
                     </div>
                     <div data-v-c4371006="" class="leftbtm">
