--- a/application/mobile/view/user/order_list.html
+++ b/application/mobile/view/user/order_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>游戏记录</title>
+    <title>平仓记录</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -19,7 +19,7 @@
 <!--主体-->
 <header class="wy-header" >
     <div class="wy-header-icon-back" onclick="window.history.back();"><span></span></div>
-    <div class="wy-header-title">游戏记录</div>
+    <div class="wy-header-title">平仓记录</div>
 </header>
 <div class='weui-content' >
     <div class="weui-tab">
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div class="weui-form-preview__ft">
-                            <a class="weui-form-preview__btn weui-form-preview__btn_primary" href="/mobile/user/order_info?oid={$val.oid}">查看详情</a>
+                            <a class="weui-form-preview__btn weui-form-preview__btn_primary" href="/mobile/User/order_info?oid={$val.oid}">查看详情</a>
                         </div>
                     </div>
                     {/volist}
