--- a/application/mobile/view/user/recharge.html
+++ b/application/mobile/view/user/recharge.html
@@ -153,7 +153,7 @@ $("#showTooltips").click(function(event) {
     }
     $.showLoading("提交中");
     $("#showTooltips").attr("disabled",true);
-    $.post("/mobile/User/recharge",{money:money,type:type},function(res){
+    $.post("/index/Notify/recharge",{money:money,type:type},function(res){
         $.hideLoading();
         $("#showTooltips").removeAttr("disabled");
         if(res.status==1){
