--- a/application/admin/view/admin/news_add.html
+++ b/application/admin/view/admin/news_add.html
@@ -43,6 +43,17 @@
                 <textarea id="content" style="display: none;" name="content" lay-verify="content" class="layui-textarea"></textarea>
             </div>
         </div>
+        <div class="layui-form-item">
+            <label for="title" class="layui-form-label">
+                        简略描述     </label>
+            <div class="layui-input-inline">
+                <input type="text" id="des" name="des" required="" lay-verify="normal"
+                       autocomplete="off" class="layui-input" >
+            </div>
+            <div class="layui-form-mid layui-word-aux">
+                1-50字
+            </div>
+        </div>
         <div class="layui-form-item" >
             <label for="type" class="layui-form-label">
                     资讯类型
