--- a/application/admin/view/admin/news_edit.html
+++ b/application/admin/view/admin/news_edit.html
@@ -44,6 +44,17 @@
                 <textarea id="content" style="display: none;" name="content" lay-verify="content" class="layui-textarea">{$info['content']}</textarea>
             </div>
         </div>
+        <div class="layui-form-item">
+            <label for="title" class="layui-form-label">
+                      简略描述       </label>
+            <div class="layui-input-inline">
+                <input type="text" id="des" name="des" required="" lay-verify="normal"
+                       autocomplete="off" class="layui-input" value="{$info['des']}">
+            </div>
+            <div class="layui-form-mid layui-word-aux">
+                1-50位
+            </div>
+        </div>
         <div class="layui-form-item" >
             <label for="type" class="layui-form-label">
                 资讯类型
