--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -13,9 +13,9 @@
 </head>
 <body ontouchstart>
 <!--顶部搜索-->
-<header class='weui-header'>
-    <div class="wy-header-title">{$GLOBALS['title']}</div>
-</header>
+<!--<header class='weui-header'>-->
+    <!--<div class="wy-header-title">{$GLOBALS['title']}</div>-->
+<!--</header>-->
 <!--主体-->
 <div class='weui-content'>
   <!--顶部轮播-->
@@ -51,7 +51,7 @@
                 <div class="weui-media-box weui-media-box_text">
                     <a href="/mobile/Notice/news_info?id={$val.id}">
                         <h4 class="weui-media-box__title" style="color: white">{$val.title}</h4>
-                    <!--<p class="weui-media-box__desc" style="color: white;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;">{$val.des}</p>-->
+                    <p class="weui-media-box__desc" style="color: white;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;">{$val.des}</p>
                     </a>
                 </div>
             {/volist}
