--- a/application/admin/view/admin/news_edit.html
+++ b/application/admin/view/admin/news_edit.html
@@ -47,12 +47,12 @@
         <div class="layui-form-item">
             <label for="title" class="layui-form-label">
                       简略描述       </label>
-            <div class="layui-input-inline">
-                <input type="text" id="des" name="des" required="" lay-verify="normal"
+            <div class="layui-input-inline" style="width: 70%">
+                <input type="text" id="des" name="des" required="" lay-verify="des"
                        autocomplete="off" class="layui-input" value="{$info['des']}">
             </div>
             <div class="layui-form-mid layui-word-aux">
-                1-50位
+                1-100位
             </div>
         </div>
         <div class="layui-form-item" >
@@ -115,6 +115,11 @@
             normal:function(value){
                 if(value.length <= 0||value.length > 50){
                     return '长度1-50位';
+                }
+            }
+            ,des:function(value){
+                if(value.length <= 0||value.length > 100){
+                    return '长度1-100位';
                 }
             }
             ,content: function(value){
