--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -51,7 +51,7 @@
                 <div class="weui-media-box weui-media-box_text">
                     <a href="/mobile/Notice/news_info?id={$val.id}">
                         <h4 class="weui-media-box__title" style="color: white">{$val.title}</h4>
-                    <p class="weui-media-box__desc" style="color: white;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;">{$val.des}</p>
+                    <p class="weui-media-box__desc">{$val.des}</p>
                     </a>
                 </div>
             {/volist}
