--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -16,6 +16,10 @@
    
     border-top: 0!important;
 	}
+    .weui-cell_access{
+        background-color: #121524;
+    }
+
 </style>
 </head>
 <body ontouchstart>
