--- a/application/mobile/view/user/real_auth.html
+++ b/application/mobile/view/user/real_auth.html
@@ -12,6 +12,9 @@
             .weui-input{
                 color: white;
             }
+            .weui-cells:after{
+                color:  #121524 !important;
+            }
         </style>
 	</head>
 <body ontouchstart>
