--- a/public/static/mobile/css/style.css
+++ b/public/static/mobile/css/style.css
@@ -12,8 +12,9 @@ html {
 body {
 	font-family: Helvetica, STHeiti STXihei, Microsoft JhengHei, Microsoft YaHei, Arial;
 	margin: 0;
-	background-color: #232222;
-	height: 100%;
+	background-color: #070915;
+	/*height: 100%;*/
+	height: 100vh;
 	overflow-x: hidden;
 	-webkit-overflow-scrolling: touch;
 	margin: 0 auto;
@@ -256,7 +257,10 @@ ol {
 }
 
 .weui-content {
-	background: #232222;
+	/*background: #232222;*/
+
+background: #121524;
+height: 100%;
 }
 
 .clearfix {
@@ -606,9 +610,9 @@ header,
 	height: 18px;
 	line-height: 18px;
 	overflow: hidden;
-	background: #fff;
-	border-top: 1px solid #e9e9e9;
-	border-bottom: 1px solid #e9e9e9;
+	
+	border-top: 1px solid #070915;
+	border-bottom: 1px solid #070915;
 	font-size: 12px;
 	position: relative;
 }
@@ -630,30 +634,72 @@ header,
 	right: 0;
 	top: 0;
 }
-
+.clearboth:after{
+            content: "";
+            clear: both;
+            display: block;
+        }
 .news-icon-laba {
-	width: 18px;
-	height: 18px;
+	width: 25px;
+	height: 25px;
+	/*height: 22px;*/
 	display: inline-block;
 	position: absolute;
 	left: 10px;
-	top: 10px;
+	top: 8px;
 	background: url(../images/news-icon.png) no-repeat;
-	background-size: 18px;
+	background-size: 100%;
 }
 
 .news-icon-more {
-	width: 18px;
-	height: 18px;
+	width: 25px;
+	height: 25px;
 	display: inline-block;
 	position: absolute;
 	right: 10px;
-	top: 10px;
+	top: 8px;
 	background: url(../images/icon-more.png) no-repeat;
-	background-size: 18px;
+	background-size: 100%;
 }
+/*首页资讯*/
+.huodnews{
+	width: 100%;
+	background: #121524;
+	padding: 10px 0;
 
-
+    border-bottom: 1px solid #070915;
+    padding-bottom: 15px
+}
+.huodnews h2{
+	padding-left: 10px;
+	font-size: 15px;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 10px;
+}
+.huodnews ul{
+	padding:0 10px;
+}
+.huodnews ul li{
+	width: 48%;
+	float: left;
+}
+.huodnews ul li:nth-child(2n+1){
+	margin-right: 4%;
+}
+.huodnews ul li img{
+	width: 100%;
+	margin-bottom: 10px;
+	border-radius: 12px;
+	-moz-border-radius: 12px;
+	-ms-border-radius: 12px;
+	-o-border-radius: 12px;
+	-webkit-border-radius: 12px;
+}
+.huodnews ul li p{
+	font-size: 14px;
+	color: white;
+}
 /*首页模块*/
 
 .wy-Module {
@@ -1405,8 +1451,9 @@ header,
 
 .wy-header {
 	height: 44px;
-	border-bottom: 1px solid #e1e1e1;
+	border-bottom: 1px solid #000000;
 	position: relative;
+    background: #121524;
 }
 
 .wy-header-icon-back {
