--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -47,12 +47,16 @@
       <h2>功能服务</h2>
       <ul>
         <li >
-            <img src="/static/mobile/images/price.png" style="height:5rem"/>
-            <p>货币行情</p>
+            <a href="/mobile/Index/price">
+                <img src="/static/mobile/images/price.png" style="height:5rem"/>
+                <p>货币行情</p>
+            </a>
         </li>
         <li>
-            <img src="/static/mobile/images/trade.png" style="height:5rem"/>
-            <p>产品交易</p>
+            <a href="/mobile/Trade/index?id=3">
+                <img src="/static/mobile/images/trade.png" style="height:5rem"/>
+                <p>产品交易</p>
+            </a>
         </li>
       </ul>
   </div>
