--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -341,7 +341,7 @@
 <div class='weui-content'>
     <div class="transaction">
         <div class="tr-header">
-            <img src="/static/mobile/images/xiayibuer.png" class="goback" onclick="window.location.href='/mobile/Index/price'"/>
+            <img src="/static/mobile/images/xiayibuer.png" class="goback" onclick="window.history.back();"/>
             <div class="tr-mo">
                 <span class="product_name" id="active_product_name" data-abbreviation="{$product.abbreviation}">{$product.desc_name}</span>
                 <img src="/static/mobile/images/xiamore.png"/>
