--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -71,7 +71,7 @@
                     </a>
                 </div>
             {/volist}
-            <div class="weui-panel__ft">
+            <div class="weui-panel__ft" style="padding-bottom: 3rem;">
                 <a href="/mobile/Notice/news_list" class="weui-cell weui-cell_access weui-cell_link">
                     <div class="weui-cell__bd" style="color: white">查看更多 </div>
                     <span class="weui-cell__ft"></span>
