--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -191,7 +191,7 @@
             <div class="wy-header-title">我的邀请码</div>
         </header>
         <img src="{$path}" alt="" />
-        <p class="info">
+        <p class="info" style="color: white">
             邀请好友扫描二维码,长按保存到手机
         </p>
         <!--<p class="info">-->
