--- a/public/static/mobile/css/style.css
+++ b/public/static/mobile/css/style.css
@@ -2111,7 +2111,7 @@ header,
     width: 100%;
 }
 .weui-popup__modal{
-    background: #fff;
+    background: #121524;
 }
 .weui-popup__modal img{
     width: 80%;
