--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -141,7 +141,7 @@
 
     .order .order-tit {
         width: 100%;
-        padding: 8px;
+        padding: 8px 0;
         background: #0e1227;
     }
 
