--- a/application/mobile/view/trade/index.html
+++ b/application/mobile/view/trade/index.html
@@ -1157,9 +1157,9 @@ $(function  () {
                 success: function (layero) {
                     layero.find('.layui-layer-content').css({
                         'padding-top': '39px',
-                        'width': '6rem',
+                        'width': '4rem',
                         'color':'white',
-                        'font-size':'1rem'
+                        'font-size':'10px'
 
                     });
                 }
@@ -1233,9 +1233,9 @@ $(function  () {
             success: function (layero) {
                 layero.find('.layui-layer-content').css({
                     'padding-top': '39px',
-                    'width': '6rem',
+                    'width': '4rem',
                     'color':'white',
-                    'font-size':'1rem'
+                    'font-size':'10px'
 
                 });
                 prepareWs();
